# cv-models

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/models/clip/: main.py
benchmarks/models/rcnn/: mask_rcnn.py
benchmarks/tracking/: utils.py
models/av/vectornet/: main.py
models/components/: patch_embed.py
models/fastvit/: main.py  modules.py
models/mobileone/: block.py
models/tracking/: base.py  types.py  utils.py
models/tracking/iou/: iou.py
models/utils/: __init__.py
models/vision/: __init__.py  base.py
models/vision/clip/: __init__.py  main.py
models/vision/components/: attention.py  conv_ffn.py  patch_embed.py
models/vision/fastvit/: main.py  modules.py
models/vision/rcnn/: faster_rcnn.py  mask_rcnn.py
tests/mobileone/: test_block.py
tests/models/mobileone/: test_block.py
tests/models/rcnn/: test_mask_rcnn.py
tests/models/vectornet/: test_main.py
tests/tracking/: utils.py
tests/utils/: test_images.py
vision/models/: __init__.py  base.py
vision/models/components/: patch_embed.py
vision/models/fastvit/: main.py  modules.py
vision/models/rcnn/: mask_rcnn.py
vision/models/vectornet/: main.py
vision/tracking/: base.py  types.py  utils.py
vision/tracking/iou/: iou.py
vision/utils/: __init__.py  images.py
